code/output/ExprParser.py
# $ANTLR 3.1.2 /home/didi/fyp/code/LexParse/Expr.g 2009-05-02 15:02:53

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
CLASS=10
METHDEF=20
WHILE=13
DEBUGFLAG=21
NEWOBJ=7
EOF=-1
BREAK=14
NAME=23
T__51=51
T__52=52
T__53=53
T__54=54
IFTEST=9
EQ=5
COMMENT=27
RETURNSTM=22
T__50=50
PARAMS=6
T__42=42
T__43=43
T__40=40
T__41=41
T__46=46
T__47=47
T__44=44
T__45=45
LINE_COMMENT=28
T__48=48
T__49=49
ELSE=16
BOOL=12
INT=26
STRINGTPL=25
T__30=30
T__31=31
T__32=32
WS=29
T__33=33
T__34=34
NEWLINE=24
T__35=35
T__36=36
T__37=37
T__38=38
T__39=39
BLOCK=4
PRINTSTM=17
SERVERNAME=19
CALL=8
PTRASS=11
OSTRING=18
DOWHILE=15

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "BLOCK", "EQ", "PARAMS", "NEWOBJ", "CALL", "IFTEST", "CLASS", "PTRASS", 
    "BOOL", "WHILE", "BREAK", "DOWHILE", "ELSE", "PRINTSTM", "OSTRING", 
    "SERVERNAME", "METHDEF", "DEBUGFLAG", "RETURNSTM", "NAME", "NEWLINE", 
    "STRINGTPL", "INT", "COMMENT", "LINE_COMMENT", "WS", "'class'", "'{'", 
    "'}'", "'return'", "'('", "')'", "'def'", "'.'", "'print'", "'while'", 
    "'break'", "'if'", "'else'", "'='", "'new'", "'@'", "'for'", "';'", 
    "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "','"
]




class ExprParser(Parser):
    grammarFileName = "/home/didi/fyp/code/LexParse/Expr.g"
    antlr_version = version_str_to_tuple("3.1.2")
    antlr_version_str = "3.1.2"
    tokenNames = tokenNames

    def __init__(self, input, state=None):
        if state is None:
            state = RecognizerSharedState()

        Parser.__init__(self, input, state)


        self.dfa2 = self.DFA2(
            self, 2,
            eot = self.DFA2_eot,
            eof = self.DFA2_eof,
            min = self.DFA2_min,
            max = self.DFA2_max,
            accept = self.DFA2_accept,
            special = self.DFA2_special,
            transition = self.DFA2_transition
            )






                
        self._adaptor = CommonTreeAdaptor()


        
    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class prog_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "prog"
    # /home/didi/fyp/code/LexParse/Expr.g:34:1: prog : classdef ;
    def prog(self, ):

        retval = self.prog_return()
        retval.start = self.input.LT(1)

        root_0 = None

        classdef1 = None



        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:34:6: ( classdef )
                # /home/didi/fyp/code/LexParse/Expr.g:34:8: classdef
                pass 
                root_0 = self._adaptor.nil()

                self._state.following.append(self.FOLLOW_classdef_in_prog117)
                classdef1 = self.classdef()

                self._state.following.pop()
                self._adaptor.addChild(root_0, classdef1.tree)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "prog"

    class classdef_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "classdef"
    # /home/didi/fyp/code/LexParse/Expr.g:38:1: classdef : 'class' NAME block -> ^( CLASS NAME block ) ;
    def classdef(self, ):

        retval = self.classdef_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal2 = None
        NAME3 = None
        block4 = None


        string_literal2_tree = None
        NAME3_tree = None
        stream_NAME = RewriteRuleTokenStream(self._adaptor, "token NAME")
        stream_30 = RewriteRuleTokenStream(self._adaptor, "token 30")
        stream_block = RewriteRuleSubtreeStream(self._adaptor, "rule block")
        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:39:2: ( 'class' NAME block -> ^( CLASS NAME block ) )
                # /home/didi/fyp/code/LexParse/Expr.g:39:5: 'class' NAME block
                pass 
                string_literal2=self.match(self.input, 30, self.FOLLOW_30_in_classdef131) 
                stream_30.add(string_literal2)
                NAME3=self.match(self.input, NAME, self.FOLLOW_NAME_in_classdef133) 
                stream_NAME.add(NAME3)
                self._state.following.append(self.FOLLOW_block_in_classdef136)
                block4 = self.block()

                self._state.following.pop()
                stream_block.add(block4.tree)

                # AST Rewrite
                # elements: block, NAME
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 

                retval.tree = root_0

                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 39:28: -> ^( CLASS NAME block )
                # /home/didi/fyp/code/LexParse/Expr.g:39:31: ^( CLASS NAME block )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(CLASS, "CLASS"), root_1)

                self._adaptor.addChild(root_1, stream_NAME.nextNode())
                self._adaptor.addChild(root_1, stream_block.nextTree())

                self._adaptor.addChild(root_0, root_1)



                retval.tree = root_0



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "classdef"

    class block_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "block"
    # /home/didi/fyp/code/LexParse/Expr.g:43:1: block : '{' ( stat )* '}' -> ^( BLOCK ( stat )* ) ;
    def block(self, ):

        retval = self.block_return()
        retval.start = self.input.LT(1)

        root_0 = None

        char_literal5 = None
        char_literal7 = None
        stat6 = None


        char_literal5_tree = None
        char_literal7_tree = None
        stream_32 = RewriteRuleTokenStream(self._adaptor, "token 32")
        stream_31 = RewriteRuleTokenStream(self._adaptor, "token 31")
        stream_stat = RewriteRuleSubtreeStream(self._adaptor, "rule stat")
        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:44:2: ( '{' ( stat )* '}' -> ^( BLOCK ( stat )* ) )
                # /home/didi/fyp/code/LexParse/Expr.g:44:4: '{' ( stat )* '}'
                pass 
                char_literal5=self.match(self.input, 31, self.FOLLOW_31_in_block163) 
                stream_31.add(char_literal5)
                # /home/didi/fyp/code/LexParse/Expr.g:44:9: ( stat )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if ((NAME <= LA1_0 <= NEWLINE) or LA1_0 == 31 or LA1_0 == 33 or LA1_0 == 36 or (38 <= LA1_0 <= 41) or LA1_0 == 46) :
                        alt1 = 1


                    if alt1 == 1:
                        # /home/didi/fyp/code/LexParse/Expr.g:44:13: stat
                        pass 
                        self._state.following.append(self.FOLLOW_stat_in_block170)
                        stat6 = self.stat()

                        self._state.following.pop()
                        stream_stat.add(stat6.tree)


                    else:
                        break #loop1


                char_literal7=self.match(self.input, 32, self.FOLLOW_32_in_block177) 
                stream_32.add(char_literal7)

                # AST Rewrite
                # elements: stat
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 

                retval.tree = root_0

                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 44:27: -> ^( BLOCK ( stat )* )
                # /home/didi/fyp/code/LexParse/Expr.g:44:30: ^( BLOCK ( stat )* )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(BLOCK, "BLOCK"), root_1)

                # /home/didi/fyp/code/LexParse/Expr.g:44:38: ( stat )*
                while stream_stat.hasNext():
                    self._adaptor.addChild(root_1, stream_stat.nextTree())


                stream_stat.reset();

                self._adaptor.addChild(root_0, root_1)



                retval.tree = root_0



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "block"

    class stat_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "stat"
    # /home/didi/fyp/code/LexParse/Expr.g:48:1: stat : ( iftest | methdef | forloop | newvar | call | block | whileloop | loopbreak | printstm | returnstm | NEWLINE );
    def stat(self, ):

        retval = self.stat_return()
        retval.start = self.input.LT(1)

        root_0 = None

        NEWLINE18 = None
        iftest8 = None

        methdef9 = None

        forloop10 = None

        newvar11 = None

        call12 = None

        block13 = None

        whileloop14 = None

        loopbreak15 = None

        printstm16 = None

        returnstm17 = None


        NEWLINE18_tree = None

        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:49:2: ( iftest | methdef | forloop | newvar | call | block | whileloop | loopbreak | printstm | returnstm | NEWLINE )
                alt2 = 11
                alt2 = self.dfa2.predict(self.input)
                if alt2 == 1:
                    # /home/didi/fyp/code/LexParse/Expr.g:49:4: iftest
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_iftest_in_stat200)
                    iftest8 = self.iftest()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, iftest8.tree)


                elif alt2 == 2:
                    # /home/didi/fyp/code/LexParse/Expr.g:50:4: methdef
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_methdef_in_stat207)
                    methdef9 = self.methdef()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, methdef9.tree)


                elif alt2 == 3:
                    # /home/didi/fyp/code/LexParse/Expr.g:51:4: forloop
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_forloop_in_stat212)
                    forloop10 = self.forloop()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, forloop10.tree)


                elif alt2 == 4:
                    # /home/didi/fyp/code/LexParse/Expr.g:52:5: newvar
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_newvar_in_stat218)
                    newvar11 = self.newvar()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, newvar11.tree)


                elif alt2 == 5:
                    # /home/didi/fyp/code/LexParse/Expr.g:53:4: call
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_call_in_stat223)
                    call12 = self.call()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, call12.tree)


                elif alt2 == 6:
                    # /home/didi/fyp/code/LexParse/Expr.g:54:5: block
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_block_in_stat229)
                    block13 = self.block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, block13.tree)


                elif alt2 == 7:
                    # /home/didi/fyp/code/LexParse/Expr.g:55:4: whileloop
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_whileloop_in_stat234)
                    whileloop14 = self.whileloop()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, whileloop14.tree)


                elif alt2 == 8:
                    # /home/didi/fyp/code/LexParse/Expr.g:56:4: loopbreak
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_loopbreak_in_stat239)
                    loopbreak15 = self.loopbreak()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, loopbreak15.tree)


                elif alt2 == 9:
                    # /home/didi/fyp/code/LexParse/Expr.g:57:4: printstm
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_printstm_in_stat244)
                    printstm16 = self.printstm()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, printstm16.tree)


                elif alt2 == 10:
                    # /home/didi/fyp/code/LexParse/Expr.g:58:4: returnstm
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_returnstm_in_stat249)
                    returnstm17 = self.returnstm()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, returnstm17.tree)


                elif alt2 == 11:
                    # /home/didi/fyp/code/LexParse/Expr.g:59:4: NEWLINE
                    pass 
                    root_0 = self._adaptor.nil()

                    NEWLINE18=self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_stat254)

                    NEWLINE18_tree = self._adaptor.createWithPayload(NEWLINE18)
                    self._adaptor.addChild(root_0, NEWLINE18_tree)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "stat"

    class returnstm_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "returnstm"
    # /home/didi/fyp/code/LexParse/Expr.g:64:1: returnstm : 'return' '(' NAME ')' -> ^( RETURNSTM NAME ) ;
    def returnstm(self, ):

        retval = self.returnstm_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal19 = None
        char_literal20 = None
        NAME21 = None
        char_literal22 = None

        string_literal19_tree = None
        char_literal20_tree = None
        NAME21_tree = None
        char_literal22_tree = None
        stream_NAME = RewriteRuleTokenStream(self._adaptor, "token NAME")
        stream_35 = RewriteRuleTokenStream(self._adaptor, "token 35")
        stream_33 = RewriteRuleTokenStream(self._adaptor, "token 33")
        stream_34 = RewriteRuleTokenStream(self._adaptor, "token 34")

        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:65:2: ( 'return' '(' NAME ')' -> ^( RETURNSTM NAME ) )
                # /home/didi/fyp/code/LexParse/Expr.g:65:5: 'return' '(' NAME ')'
                pass 
                string_literal19=self.match(self.input, 33, self.FOLLOW_33_in_returnstm268) 
                stream_33.add(string_literal19)
                char_literal20=self.match(self.input, 34, self.FOLLOW_34_in_returnstm270) 
                stream_34.add(char_literal20)
                NAME21=self.match(self.input, NAME, self.FOLLOW_NAME_in_returnstm272) 
                stream_NAME.add(NAME21)
                char_literal22=self.match(self.input, 35, self.FOLLOW_35_in_returnstm274) 
                stream_35.add(char_literal22)

                # AST Rewrite
                # elements: NAME
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 

                retval.tree = root_0

                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 65:27: -> ^( RETURNSTM NAME )
                # /home/didi/fyp/code/LexParse/Expr.g:65:30: ^( RETURNSTM NAME )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(RETURNSTM, "RETURNSTM"), root_1)

                self._adaptor.addChild(root_1, stream_NAME.nextNode())

                self._adaptor.addChild(root_0, root_1)



                retval.tree = root_0



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "returnstm"

    class methdef_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "methdef"
    # /home/didi/fyp/code/LexParse/Expr.g:70:1: methdef : 'def' NAME block -> ^( METHDEF NAME block ) ;
    def methdef(self, ):

        retval = self.methdef_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal23 = None
        NAME24 = None
        block25 = None


        string_literal23_tree = None
        NAME24_tree = None
        stream_NAME = RewriteRuleTokenStream(self._adaptor, "token NAME")
        stream_36 = RewriteRuleTokenStream(self._adaptor, "token 36")
        stream_block = RewriteRuleSubtreeStream(self._adaptor, "rule block")
        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:71:2: ( 'def' NAME block -> ^( METHDEF NAME block ) )
                # /home/didi/fyp/code/LexParse/Expr.g:71:4: 'def' NAME block
                pass 
                string_literal23=self.match(self.input, 36, self.FOLLOW_36_in_methdef296) 
                stream_36.add(string_literal23)
                NAME24=self.match(self.input, NAME, self.FOLLOW_NAME_in_methdef298) 
                stream_NAME.add(NAME24)
                self._state.following.append(self.FOLLOW_block_in_methdef300)
                block25 = self.block()

                self._state.following.pop()
                stream_block.add(block25.tree)

                # AST Rewrite
                # elements: block, NAME
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 

                retval.tree = root_0

                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 71:21: -> ^( METHDEF NAME block )
                # /home/didi/fyp/code/LexParse/Expr.g:71:24: ^( METHDEF NAME block )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(METHDEF, "METHDEF"), root_1)

                self._adaptor.addChild(root_1, stream_NAME.nextNode())
                self._adaptor.addChild(root_1, stream_block.nextTree())

                self._adaptor.addChild(root_0, root_1)



                retval.tree = root_0



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "methdef"

    class call_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "call"
    # /home/didi/fyp/code/LexParse/Expr.g:76:1: call : a= NAME '.' b= NAME paramlist -> ^( CALL $a $b paramlist ) ;
    def call(self, ):

        retval = self.call_return()
        retval.start = self.input.LT(1)

        root_0 = None

        a = None
        b = None
        char_literal26 = None
        paramlist27 = None


        a_tree = None
        b_tree = None
        char_literal26_tree = None
        stream_NAME = RewriteRuleTokenStream(self._adaptor, "token NAME")
        stream_37 = RewriteRuleTokenStream(self._adaptor, "token 37")
        stream_paramlist = RewriteRuleSubtreeStream(self._adaptor, "rule paramlist")
        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:77:2: (a= NAME '.' b= NAME paramlist -> ^( CALL $a $b paramlist ) )
                # /home/didi/fyp/code/LexParse/Expr.g:77:4: a= NAME '.' b= NAME paramlist
                pass 
                a=self.match(self.input, NAME, self.FOLLOW_NAME_in_call326) 
                stream_NAME.add(a)
                char_literal26=self.match(self.input, 37, self.FOLLOW_37_in_call328) 
                stream_37.add(char_literal26)
                b=self.match(self.input, NAME, self.FOLLOW_NAME_in_call332) 
                stream_NAME.add(b)
                self._state.following.append(self.FOLLOW_paramlist_in_call334)
                paramlist27 = self.paramlist()

                self._state.following.pop()
                stream_paramlist.add(paramlist27.tree)

                # AST Rewrite
                # elements: b, a, paramlist
                # token labels: b, a
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 

                retval.tree = root_0
                stream_b = RewriteRuleTokenStream(self._adaptor, "token b", b)
                stream_a = RewriteRuleTokenStream(self._adaptor, "token a", a)

                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 77:32: -> ^( CALL $a $b paramlist )
                # /home/didi/fyp/code/LexParse/Expr.g:77:35: ^( CALL $a $b paramlist )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(CALL, "CALL"), root_1)

                self._adaptor.addChild(root_1, stream_a.nextNode())
                self._adaptor.addChild(root_1, stream_b.nextNode())
                self._adaptor.addChild(root_1, stream_paramlist.nextTree())

                self._adaptor.addChild(root_0, root_1)



                retval.tree = root_0



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "call"

    class printstm_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "printstm"
    # /home/didi/fyp/code/LexParse/Expr.g:82:1: printstm : 'print' '(' printparams ')' -> ^( PRINTSTM printparams ) ;
    def printstm(self, ):

        retval = self.printstm_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal28 = None
        char_literal29 = None
        char_literal31 = None
        printparams30 = None


        string_literal28_tree = None
        char_literal29_tree = None
        char_literal31_tree = None
        stream_35 = RewriteRuleTokenStream(self._adaptor, "token 35")
        stream_34 = RewriteRuleTokenStream(self._adaptor, "token 34")
        stream_38 = RewriteRuleTokenStream(self._adaptor, "token 38")
        stream_printparams = RewriteRuleSubtreeStream(self._adaptor, "rule printparams")
        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:83:2: ( 'print' '(' printparams ')' -> ^( PRINTSTM printparams ) )
                # /home/didi/fyp/code/LexParse/Expr.g:83:4: 'print' '(' printparams ')'
                pass 
                string_literal28=self.match(self.input, 38, self.FOLLOW_38_in_printstm361) 
                stream_38.add(string_literal28)
                char_literal29=self.match(self.input, 34, self.FOLLOW_34_in_printstm363) 
                stream_34.add(char_literal29)
                self._state.following.append(self.FOLLOW_printparams_in_printstm365)
                printparams30 = self.printparams()

                self._state.following.pop()
                stream_printparams.add(printparams30.tree)
                char_literal31=self.match(self.input, 35, self.FOLLOW_35_in_printstm367) 
                stream_35.add(char_literal31)

                # AST Rewrite
                # elements: printparams
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 

                retval.tree = root_0

                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 83:32: -> ^( PRINTSTM printparams )
                # /home/didi/fyp/code/LexParse/Expr.g:83:35: ^( PRINTSTM printparams )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(PRINTSTM, "PRINTSTM"), root_1)

                self._adaptor.addChild(root_1, stream_printparams.nextTree())

                self._adaptor.addChild(root_0, root_1)



                retval.tree = root_0



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass

        return retval

    # $ANTLR end "printstm"

    class printparams_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)

            self.tree = None




    # $ANTLR start "printparams"
    # /home/didi/fyp/code/LexParse/Expr.g:87:1: printparams : ( call | NAME | STRINGTPL -> ^( OSTRING STRINGTPL ) );
    def printparams(self, ):

        retval = self.printparams_return()
        retval.start = self.input.LT(1)

        root_0 = None

        NAME33 = None
        STRINGTPL34 = None
        call32 = None


        NAME33_tree = None
        STRINGTPL34_tree = None
        stream_STRINGTPL = RewriteRuleTokenStream(self._adaptor, "token STRINGTPL")

        try:
            try:
                # /home/didi/fyp/code/LexParse/Expr.g:88:2: ( call | NAME | STRINGTPL -> ^( OSTRING STRINGTPL ) )
                alt3 = 3
                LA3_0 = self.input.LA(1)

                if (LA3_0 == NAME) :
                    LA3_1 = self.input.LA(2)

                    if (LA3_1 == 37) :
                        alt3 = 1
                    elif (LA3_1 == 35) :
                        alt3 = 2
                    else:
                        nvae = NoViableAltException("", 3, 1, self.input)

                        raise nvae

                elif (LA3_0 == STRINGTPL) :
                    alt3 = 3
                else:
                    nvae = NoViableAltException("", 3, 0, self.input)

                    raise nvae

                if alt3 == 1:
                    # /home/didi/fyp/code/LexParse/Expr.g:88:4: call
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_call_in_printparams387)
                    call32 = self.call()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, call32.tree)


                elif alt3 == 2:
                    # /home/didi/fyp/code/LexParse/Expr.g:89:4: NAME
                    pass 
                    root_0 = self._adaptor.nil()
